--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-    "functions": "functions",
-    "routes": [
-      { "src": "/api/auth/.*", "dest": "/functions/api/auth.js" },
-      { "src": "/api/bank/.*", "dest": "/functions/api/bank.js" },
-      { "src": "/.*", "dest": "/functions/api/default.js" }
-    ]
+    "version":2,
+     "builds": [
+        {
+            "src":"./server.js",
+            "use":"@now/node"
+        }
+     ],
+     "routes":[
+        {
+            "src": "/(.*)",
+            "dest":"server.js"
+        }
+     ] 
   }
+  
